# door_sensor

./: CMakeLists.txt  Makefile  README.md  config.env  sdkconfig  sdkconfig.old
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
main/: CMakeLists.txt  Kconfig  main.c
main/components/adc/: adc.c  adc.h
main/components/common/: common.h  header.c  header.h
main/components/led/: led.c  led.h
main/components/node/: node.c  node.h
main/components/nvs_mgmt/: nvs_mgmt.c  nvs_mgmt.h
main/components/rtc/: rtc.c  rtc.h
main/components/sensor/: sensor.c  sensor.h
main/components/sensors/: sensors.c  sensors.h
main/components/ulp/: pulse_cnt.S
main/components/web_server/: web_server.c  web_server.h
main/components/wifi/: wifi.c  wifi.h
